<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lisheng.progressv21.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickagoal"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/goal_spinner"
        android:layout_marginTop="10dp"
        android:entries="@array/goals"/>

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:layout_gravity="center"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:cpb_background_progressbar_color="#9e9e9e"
        app:cpb_background_progressbar_width="5dp"
        app:cpb_progressbar_color="#212121"
        app:cpb_progressbar_width="10dp"
        android:id="@+id/progressBar"/>


    <com.hanks.htextview.HTextView
        android:id="@+id/secView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="sec"
        app:animateType="evaporate"
    />


    <com.hanks.htextview.HTextView
        android:id="@+id/minView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="-20dp"
        android:gravity="center"
        android:textColor="#000000"
        android:text="min"
        app:animateType="evaporate"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_gravity="center"
        android:id="@+id/button"
        android:background="#000000"
        android:textColor="#FFFFFF"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/save_button"
        android:layout_marginTop="5dp"
        android:text="@string/save"
        android:background="#000000"
        android:textColor="#FFFFFF"

        />


</LinearLayout>
